tests/negative/typecheck/negate.orng
fn main()->Char {-3}